# MyTodolist

./: .gitignore  pyproject.toml
mytodo/: settings.py  urls.py
todolist/: models.py  serializers.py  urls.py  views.py
todolist/migrations/: 0001_initial.py  0002_alter_todo_completed_at.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_name.py
